Add income ranking, add data from 08-30

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,19 +6,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1911.12\tAndi\n",
-      "1786.49\tGuxin Jin\n",
-      "1619.01\tLucas Li\n",
-      "1606.89\tChen Meng\n",
-      "1597.80\tShu Zhang\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<rating.Game instance at 0x10d1c4a28>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from rating import Game, print_top_k_rating\n",
+    "from rating import Game, print_top_k_rating, print_top_k_income\n",
     "\n",
     "# 2019-08-23\n",
     "Game({\"Andi\": 95,\n",
@@ -27,12 +26,65 @@
     "      \"Brian\": -49,\n",
     "      \"Tom\": -35,\n",
     "      \"Liy\": -40,\n",
-    "      \"Abby\": -62,\n",
+    "      \"Abby Deng\": -62,\n",
     "      \"Quanlai Li\": -40,\n",
-    "      \"Shu Zhang\": 22.6,\n",
+    "      \"Shu Zhou\": 22.6,\n",
     "      \"Yingjie Ma\": -20,\n",
     "      \"Chen Meng\": 24.7})\n",
-    "print_top_k_rating(5)\n"
+    "\n",
+    "# 2019-08-30\n",
+    "Game({\"Shu Zhou\": 20,\n",
+    "      \"Andi\": 0,\n",
+    "      \"Guxin Jin\": -33.5,\n",
+    "      \"Shengke Zhou\": -31.8,\n",
+    "      \"Quanlai Li\": 40,\n",
+    "      \"Po Choi\": -20,\n",
+    "      \"Abby Deng\": -13.9,\n",
+    "      \"Yingjie Ma\": 17.6,\n",
+    "      \"Tom\": -6.6,\n",
+    "      \"Lucas Li\": 28})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1703.73\tAndi\n",
+      "1641.17\tLucas Li\n",
+      "1609.57\tShu Zhou\n",
+      "1606.89\tChen Meng\n",
+      "1552.85\tGuxin Jin\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\tAndi\n",
+      "55.5\tLucas Li\n",
+      "42.6\tShu Zhou\n",
+      "32.7\tGuxin Jin\n",
+      "24.7\tChen Meng\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_top_k_income(5)"
    ]
   },
   {
