--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<rating.Game instance at 0x10d1c4a28>"
+       "<rating.Game instance at 0x103721a28>"
       ]
      },
      "execution_count": 1,
@@ -20,12 +20,12 @@
     "from rating import Game, print_top_k_rating, print_top_k_income\n",
     "\n",
     "# 2019-08-23\n",
-    "Game({\"Andi\": 95,\n",
-    "      \"Guxin Jin\": 66.2,\n",
+    "Game({\"Guxin Jin\": 66.2,\n",
+    "      \"Andi\": 95,\n",
     "      \"Lucas Li\": 27.5,\n",
     "      \"Brian\": -49,\n",
-    "      \"Tom\": -35,\n",
     "      \"Liy\": -40,\n",
+    "      \"Tom\": -35,\n",
     "      \"Abby Deng\": -62,\n",
     "      \"Quanlai Li\": -40,\n",
     "      \"Shu Zhou\": 22.6,\n",
@@ -34,13 +34,13 @@
     "\n",
     "# 2019-08-30\n",
     "Game({\"Shu Zhou\": 20,\n",
-    "      \"Andi\": 0,\n",
     "      \"Guxin Jin\": -33.5,\n",
     "      \"Shengke Zhou\": -31.8,\n",
     "      \"Quanlai Li\": 40,\n",
     "      \"Po Choi\": -20,\n",
     "      \"Abby Deng\": -13.9,\n",
     "      \"Yingjie Ma\": 17.6,\n",
+    "      \"Andi\": 0,\n",
     "      \"Tom\": -6.6,\n",
     "      \"Lucas Li\": 28})"
    ]
@@ -64,27 +64,6 @@
    ],
    "source": [
     "print_top_k_rating(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "95\tAndi\n",
-      "55.5\tLucas Li\n",
-      "42.6\tShu Zhou\n",
-      "32.7\tGuxin Jin\n",
-      "24.7\tChen Meng\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_top_k_income(5)"
    ]
   },
   {
