--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,14 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<rating.Game instance at 0x103721a28>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1911.12\tAndi\n",
+      "1786.49\tGuxin Jin\n",
+      "1619.01\tLucas Li\n",
+      "1606.89\tChen Meng\n",
+      "1597.80\tShu Zhou\n"
+     ]
     }
    ],
    "source": [
@@ -32,17 +33,7 @@
     "      \"Yingjie Ma\": -20,\n",
     "      \"Chen Meng\": 24.7})\n",
     "\n",
-    "# 2019-08-30\n",
-    "Game({\"Shu Zhou\": 20,\n",
-    "      \"Guxin Jin\": -33.5,\n",
-    "      \"Shengke Zhou\": -31.8,\n",
-    "      \"Quanlai Li\": 40,\n",
-    "      \"Po Choi\": -20,\n",
-    "      \"Abby Deng\": -13.9,\n",
-    "      \"Yingjie Ma\": 17.6,\n",
-    "      \"Andi\": 0,\n",
-    "      \"Tom\": -6.6,\n",
-    "      \"Lucas Li\": 28})"
+    "print_top_k_rating(5)"
    ]
   },
   {
@@ -63,6 +54,17 @@
     }
    ],
    "source": [
+    "# 2019-08-30\n",
+    "Game({\"Shu Zhou\": 20,\n",
+    "      \"Guxin Jin\": -33.5,\n",
+    "      \"Shengke Zhou\": -31.8,\n",
+    "      \"Quanlai Li\": 40,\n",
+    "      \"Po Choi\": -20,\n",
+    "      \"Abby Deng\": -13.9,\n",
+    "      \"Yingjie Ma\": 17.6,\n",
+    "      \"Andi\": 0,\n",
+    "      \"Tom\": -6.6,\n",
+    "      \"Lucas Li\": 28})\n",
     "print_top_k_rating(5)"
    ]
   },
