--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -65,6 +65,42 @@
     "      \"Andi\": 0,\n",
     "      \"Tom\": -6.6,\n",
     "      \"Lucas Li\": 28})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1734.86\tShu Zhou\n",
+      "1667.01\tJianfeng Guo\n",
+      "1659.28\tLei Qi\n",
+      "1644.72\tAndi\n",
+      "1621.40\tXue Zhou\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-09-06\n",
+    "Game({\n",
+    "    \"Guxin Jin\": -51.6,\n",
+    "    \"Lucas Li\": -80,\n",
+    "    \"Chen Meng\": -41,\n",
+    "    \"Shu Zhou\": 89.6,\n",
+    "    \"Jianfeng Guo\": 28.8,\n",
+    "    \"Xue Zhou\": 17,\n",
+    "    \"Shengke Zhou\": 9.4,\n",
+    "    \"Lei Qi\": 26.8,\n",
+    "    \"Peter Zhou\": 11,\n",
+    "    \"Andi\": 0    \n",
+    "})\n",
+    "\n",
     "print_top_k_rating(5)"
    ]
   },
