--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,11 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1911.12\tAndi\n",
-      "1786.49\tGuxin Jin\n",
-      "1619.01\tLucas Li\n",
-      "1606.89\tChen Meng\n",
-      "1597.80\tShu Zhou\n"
+      "1932.76\tAndi\n",
+      "1801.56\tGuxin Jin\n",
+      "1625.27\tLucas Li\n",
+      "1612.52\tChen Meng\n",
+      "1602.95\tShu Zhou\n"
      ]
     }
    ],
@@ -45,11 +45,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1703.73\tAndi\n",
-      "1641.17\tLucas Li\n",
-      "1609.57\tShu Zhou\n",
-      "1606.89\tChen Meng\n",
-      "1552.85\tGuxin Jin\n"
+      "1756.31\tLucas Li\n",
+      "1716.70\tAndi\n",
+      "1691.63\tShu Zhou\n",
+      "1687.65\tQuanlai Li\n",
+      "1612.52\tChen Meng\n"
      ]
     }
    ],
@@ -78,11 +78,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1734.86\tShu Zhou\n",
-      "1667.01\tJianfeng Guo\n",
-      "1659.28\tLei Qi\n",
-      "1644.72\tAndi\n",
-      "1621.40\tXue Zhou\n"
+      "1813.09\tShu Zhou\n",
+      "1687.65\tQuanlai Li\n",
+      "1685.73\tJianfeng Guo\n",
+      "1676.15\tLei Qi\n",
+      "1652.94\tAndi\n"
      ]
     }
    ],
