--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -106,6 +106,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1688.82\tShu Zhou\n",
+      "1676.42\tAndi\n",
+      "1629.19\tXue Zhou\n",
+      "1626.93\tLucas Li\n",
+      "1626.38\tAbby Deng\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-09-13\n",
+    "Game({\n",
+    "    \"Abby Deng\": 48.4,\n",
+    "    \"Lucas Li\": 28.2,\n",
+    "    \"Andi\": 17.2,\n",
+    "    \"Guxin Jin\": 5.8,\n",
+    "    \"Jianfeng Guo\": -40,\n",
+    "    \"Shu Zhou\": -12.6,\n",
+    "    \"Xueqing Zhang\": -6.2,\n",
+    "    \"Quanlai Li\": -26.1,\n",
+    "    \"Chaofeng Zhou\": -20,\n",
+    "    \"Lei Qi\": -12.6,\n",
+    "    \"Shengke Zhou\": -6.5,\n",
+    "    \"ZYR\": 4.5\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
