--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -143,6 +143,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1688.82\tShu Zhou\n",
+      "1676.42\tAndi\n",
+      "1662.31\tChen Meng\n",
+      "1626.38\tAbby Deng\n",
+      "1620.08\tYingjie Ma\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-09-20\n",
+    "Game({\n",
+    "    \"Tom\": 49,\n",
+    "    \"William\": -22,\n",
+    "    \"Ellen\": -40,\n",
+    "    \"Yuan\": -4,\n",
+    "    \"Quanlai Li\": -80,\n",
+    "    \"Xiner\": -9.4,\n",
+    "    \"Chen Meng\": 89.6,\n",
+    "    \"Chaofeng Zhou\": 55.8,\n",
+    "    \"Yingjie Ma\": 36.8,\n",
+    "    \"Guxin Jin\": 28.2,\n",
+    "    \"Xue Zhou\": -55,\n",
+    "    \"Lucas Li\": -20\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
