--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,6 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Andi\n",
+      "New player: Abby Deng\n",
+      "New player: Chen Meng\n",
+      "New player: Brian\n",
+      "New player: Tom\n",
+      "New player: Quanlai Li\n",
+      "New player: Shu Zhou\n",
+      "New player: Liy\n",
+      "New player: Lucas Li\n",
+      "New player: Yingjie Ma\n",
+      "New player: Guxin Jin\n",
+      "\n",
+      "Money won: 236.00\n",
+      "Money lost: 246.00\n",
+      "\n",
       "1932.76\tAndi\n",
       "1801.56\tGuxin Jin\n",
       "1625.27\tLucas Li\n",
@@ -45,6 +60,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Shengke Zhou\n",
+      "New player: Po Choi\n",
+      "\n",
+      "Money won: 105.60\n",
+      "Money lost: 105.80\n",
+      "\n",
       "1756.31\tLucas Li\n",
       "1716.70\tAndi\n",
       "1691.63\tShu Zhou\n",
@@ -78,6 +99,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Xue Zhou\n",
+      "New player: Peter Zhou\n",
+      "New player: Jianfeng Guo\n",
+      "New player: Lei Qi\n",
+      "\n",
+      "Money won: 182.60\n",
+      "Money lost: 172.60\n",
+      "\n",
       "1813.09\tShu Zhou\n",
       "1687.65\tQuanlai Li\n",
       "1685.73\tJianfeng Guo\n",
@@ -113,6 +142,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: ZYR\n",
+      "New player: Xueqing Zhang\n",
+      "New player: Chaofeng Zhou\n",
+      "\n",
+      "Money won: 104.10\n",
+      "Money lost: 124.00\n",
+      "\n",
       "1688.82\tShu Zhou\n",
       "1676.42\tAndi\n",
       "1629.19\tXue Zhou\n",
@@ -150,6 +186,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Ellen\n",
+      "New player: Yuan\n",
+      "New player: William\n",
+      "New player: Xiner\n",
+      "\n",
+      "Money won: 259.40\n",
+      "Money lost: 230.40\n",
+      "\n",
       "1688.82\tShu Zhou\n",
       "1676.42\tAndi\n",
       "1662.31\tChen Meng\n",
@@ -180,10 +224,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: Lin Zhou\n",
+      "New player: Di Zhu\n",
+      "New player: Roc\n",
+      "\n",
+      "Money won: 262.00\n",
+      "Money lost: 286.30\n",
+      "\n",
+      "1698.43\tChaofeng Zhou\n",
+      "1688.82\tShu Zhou\n",
+      "1662.31\tChen Meng\n",
+      "1626.38\tAbby Deng\n",
+      "1612.63\tAndi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-09-27\n",
+    "Game({\n",
+    "    \"Shengke Zhou\": 29.4,\n",
+    "    \"Tom\": -23.6,\n",
+    "    \"Di Zhu\": -17,\n",
+    "    \"Andi\": -42.4,\n",
+    "    \"Yingjie Ma\": -41.8,\n",
+    "    \"Xue Zhou\": -2.8,\n",
+    "    \"Roc\": -80,\n",
+    "    \"Lucas Li\": -78.7,\n",
+    "    \"Guxin Jin\": 9,\n",
+    "    \"Chaofeng Zhou\": 200.4,\n",
+    "    \"Lin Zhou\": 23.2\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
   },
   {
    "cell_type": "code",
