--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New player: Andi\n",
       "New player: Abby Deng\n",
       "New player: Chen Meng\n",
       "New player: Brian\n",
@@ -19,12 +18,13 @@
       "New player: Liy\n",
       "New player: Lucas Li\n",
       "New player: Yingjie Ma\n",
+      "New player: Di An\n",
       "New player: Guxin Jin\n",
       "\n",
       "Money won: 236.00\n",
       "Money lost: 246.00\n",
       "\n",
-      "1932.76\tAndi\n",
+      "1932.76\tDi An\n",
       "1801.56\tGuxin Jin\n",
       "1625.27\tLucas Li\n",
       "1612.52\tChen Meng\n",
@@ -37,7 +37,7 @@
     "\n",
     "# 2019-08-23\n",
     "Game({\"Guxin Jin\": 66.2,\n",
-    "      \"Andi\": 95,\n",
+    "      \"Di An\": 95,\n",
     "      \"Lucas Li\": 27.5,\n",
     "      \"Brian\": -49,\n",
     "      \"Liy\": -40,\n",
@@ -67,7 +67,7 @@
       "Money lost: 105.80\n",
       "\n",
       "1756.31\tLucas Li\n",
-      "1716.70\tAndi\n",
+      "1716.70\tDi An\n",
       "1691.63\tShu Zhou\n",
       "1687.65\tQuanlai Li\n",
       "1612.52\tChen Meng\n"
@@ -83,7 +83,7 @@
     "      \"Po Choi\": -20,\n",
     "      \"Abby Deng\": -13.9,\n",
     "      \"Yingjie Ma\": 17.6,\n",
-    "      \"Andi\": 0,\n",
+    "      \"Di An\": 0,\n",
     "      \"Tom\": -6.6,\n",
     "      \"Lucas Li\": 28})\n",
     "\n",
@@ -111,7 +111,7 @@
       "1687.65\tQuanlai Li\n",
       "1685.73\tJianfeng Guo\n",
       "1676.15\tLei Qi\n",
-      "1652.94\tAndi\n"
+      "1652.94\tDi An\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
     "    \"Shengke Zhou\": 9.4,\n",
     "    \"Lei Qi\": 26.8,\n",
     "    \"Peter Zhou\": 11,\n",
-    "    \"Andi\": 0    \n",
+    "    \"Di An\": 0    \n",
     "})\n",
     "\n",
     "print_top_k_rating(5)"
@@ -150,7 +150,7 @@
       "Money lost: 124.00\n",
       "\n",
       "1688.82\tShu Zhou\n",
-      "1676.42\tAndi\n",
+      "1676.42\tDi An\n",
       "1629.19\tXue Zhou\n",
       "1626.93\tLucas Li\n",
       "1626.38\tAbby Deng\n"
@@ -162,7 +162,7 @@
     "Game({\n",
     "    \"Abby Deng\": 48.4,\n",
     "    \"Lucas Li\": 28.2,\n",
-    "    \"Andi\": 17.2,\n",
+    "    \"Di An\": 17.2,\n",
     "    \"Guxin Jin\": 5.8,\n",
     "    \"Jianfeng Guo\": -40,\n",
     "    \"Shu Zhou\": -12.6,\n",
@@ -186,8 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Yuan Zhuang\n",
       "New player: Ellen\n",
-      "New player: Yuan\n",
       "New player: William\n",
       "New player: Xiner\n",
       "\n",
@@ -195,7 +195,7 @@
       "Money lost: 230.40\n",
       "\n",
       "1688.82\tShu Zhou\n",
-      "1676.42\tAndi\n",
+      "1676.42\tDi An\n",
       "1662.31\tChen Meng\n",
       "1626.38\tAbby Deng\n",
       "1620.08\tYingjie Ma\n"
@@ -208,7 +208,7 @@
     "    \"Tom\": 49,\n",
     "    \"William\": -22,\n",
     "    \"Ellen\": -40,\n",
-    "    \"Yuan\": -4,\n",
+    "    \"Yuan Zhuang\": -4,\n",
     "    \"Quanlai Li\": -80,\n",
     "    \"Xiner\": -9.4,\n",
     "    \"Chen Meng\": 89.6,\n",
@@ -242,7 +242,7 @@
       "1688.82\tShu Zhou\n",
       "1662.31\tChen Meng\n",
       "1626.38\tAbby Deng\n",
-      "1612.63\tAndi\n"
+      "1612.63\tDi An\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "    \"Shengke Zhou\": 29.4,\n",
     "    \"Tom\": -23.6,\n",
     "    \"Di Zhu\": -17,\n",
-    "    \"Andi\": -42.4,\n",
+    "    \"Di An\": -42.4,\n",
     "    \"Yingjie Ma\": -41.8,\n",
     "    \"Xue Zhou\": -2.8,\n",
     "    \"Roc\": -80,\n",
@@ -260,6 +260,70 @@
     "    \"Guxin Jin\": 9,\n",
     "    \"Chaofeng Zhou\": 200.4,\n",
     "    \"Lin Zhou\": 23.2\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: Gilbert\n",
+      "New player: Xin Qiu\n",
+      "\n",
+      "Money won: 425.00\n",
+      "Money lost: 420.20\n",
+      "\n",
+      "1739.15\tGilbert\n",
+      "1699.75\tChen Meng\n",
+      "1648.75\tXin Qiu\n",
+      "1644.69\tShengke Zhou\n",
+      "1640.70\tShu Zhou\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-10-04\n",
+    "shengke_zhou = \"Shengke Zhou\"\n",
+    "chaofeng_zhou = \"Chaofeng Zhou\"\n",
+    "tom = \"Tom\"\n",
+    "jianfeng_guo = \"Jianfeng Guo\"\n",
+    "di_an = \"Di An\"\n",
+    "yuan_zhuang = \"Yuan Zhuang\"\n",
+    "xin_qiu = \"Xin Qiu\"\n",
+    "chen_meng = \"Chen Meng\"\n",
+    "lucas_li = \"Lucas Li\"\n",
+    "guxin_jin = \"Guxin Jin\"\n",
+    "yingjie_ma = \"Yingjie Ma\"\n",
+    "shu_zhou = \"Shu Zhou\"\n",
+    "peter_zhou = \"Peter Zhou\"\n",
+    "xiner = \"Xiner\"\n",
+    "gilbert = \"Gilbert\"\n",
+    "quanlai_li = \"Quanlai Li\"\n",
+    "\n",
+    "Game({\n",
+    "    shengke_zhou: 147.8,\n",
+    "    chaofeng_zhou: -120,\n",
+    "    tom: -54.8,\n",
+    "    jianfeng_guo: 9.8,\n",
+    "    di_an: -120,\n",
+    "    yuan_zhuang: 5.2,\n",
+    "    xin_qiu: 43.8,\n",
+    "    chen_meng: 78.2,\n",
+    "    lucas_li: -80,\n",
+    "    guxin_jin: -5.6,\n",
+    "    yingjie_ma: -14.6,\n",
+    "    shu_zhou: 6,\n",
+    "    peter_zhou: 12.4,\n",
+    "    xiner: 41.8,\n",
+    "    gilbert: 80,\n",
+    "    quanlai_li: -25.2\n",
     "})\n",
     "\n",
     "print_top_k_rating(5)"
