--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -186,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: William Tang\n",
       "New player: Yuan Zhuang\n",
       "New player: Ellen\n",
-      "New player: William\n",
       "New player: Xiner\n",
       "\n",
       "Money won: 259.40\n",
@@ -206,7 +206,7 @@
     "# 2019-09-20\n",
     "Game({\n",
     "    \"Tom\": 49,\n",
-    "    \"William\": -22,\n",
+    "    \"William Tang\": -22,\n",
     "    \"Ellen\": -40,\n",
     "    \"Yuan Zhuang\": -4,\n",
     "    \"Quanlai Li\": -80,\n",
@@ -324,6 +324,63 @@
     "    xiner: 41.8,\n",
     "    gilbert: 80,\n",
     "    quanlai_li: -25.2\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: Ellen Wei\n",
+      "New player: Affab Hafreez\n",
+      "New player: Samuel\n",
+      "New player: Zhongtian Jiang\n",
+      "\n",
+      "Money won: 338.20\n",
+      "Money lost: 332.60\n",
+      "\n",
+      "1744.26\tChen Meng\n",
+      "1739.15\tGilbert\n",
+      "1725.17\tShengke Zhou\n",
+      "1667.00\tShu Zhou\n",
+      "1626.38\tAbby Deng\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-10-11\n",
+    "\n",
+    "lei_qi = \"Lei Qi\"\n",
+    "xue_zhou = \"Xue Zhou\"\n",
+    "zhongtian_jiang = \"Zhongtian Jiang\"\n",
+    "william_tang = \"William Tang\"\n",
+    "ellen_wei = \"Ellen Wei\"\n",
+    "\n",
+    "Game({\n",
+    "    lei_qi: -27,\n",
+    "    shengke_zhou: 119.2,\n",
+    "    \"Affab Hafreez\": -18.2,\n",
+    "    quanlai_li: -76.2,\n",
+    "    zhongtian_jiang: -61.2,\n",
+    "    guxin_jin: 8.2,\n",
+    "    shu_zhou: 58.2,\n",
+    "    xin_qiu: 0,\n",
+    "    lucas_li: -5.4,\n",
+    "    chen_meng: 89.4,\n",
+    "    william_tang: 48,\n",
+    "    yingjie_ma: -4.2,\n",
+    "    xue_zhou: -71,\n",
+    "    chaofeng_zhou: -39.6,\n",
+    "    \"Samuel\": -29.8,\n",
+    "    tom: 3.8,\n",
+    "    ellen_wei: 11.4\n",
     "})\n",
     "\n",
     "print_top_k_rating(5)"
