--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -70,7 +70,7 @@
       "1716.70\tDi An\n",
       "1691.63\tShu Zhou\n",
       "1687.65\tQuanlai Li\n",
-      "1612.52\tChen Meng\n"
+      "1612.52\tChen Meng (absent: 1)\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
       "Money lost: 172.60\n",
       "\n",
       "1813.09\tShu Zhou\n",
-      "1687.65\tQuanlai Li\n",
+      "1687.65\tQuanlai Li (absent: 1)\n",
       "1685.73\tJianfeng Guo\n",
       "1676.15\tLei Qi\n",
       "1652.94\tDi An\n"
@@ -151,7 +151,7 @@
       "\n",
       "1688.82\tShu Zhou\n",
       "1676.42\tDi An\n",
-      "1629.19\tXue Zhou\n",
+      "1629.19\tXue Zhou (absent: 1)\n",
       "1626.93\tLucas Li\n",
       "1626.38\tAbby Deng\n"
      ]
@@ -194,10 +194,10 @@
       "Money won: 259.40\n",
       "Money lost: 230.40\n",
       "\n",
-      "1688.82\tShu Zhou\n",
-      "1676.42\tDi An\n",
+      "1688.82\tShu Zhou (absent: 1)\n",
+      "1676.42\tDi An (absent: 1)\n",
       "1662.31\tChen Meng\n",
-      "1626.38\tAbby Deng\n",
+      "1626.38\tAbby Deng (absent: 1)\n",
       "1620.08\tYingjie Ma\n"
      ]
     }
@@ -239,9 +239,9 @@
       "Money lost: 286.30\n",
       "\n",
       "1698.43\tChaofeng Zhou\n",
-      "1688.82\tShu Zhou\n",
-      "1662.31\tChen Meng\n",
-      "1626.38\tAbby Deng\n",
+      "1688.82\tShu Zhou (absent: 2)\n",
+      "1662.31\tChen Meng (absent: 1)\n",
+      "1626.38\tAbby Deng (absent: 2)\n",
       "1612.63\tDi An\n"
      ]
     }
@@ -347,10 +347,10 @@
       "Money lost: 332.60\n",
       "\n",
       "1744.26\tChen Meng\n",
-      "1739.15\tGilbert\n",
+      "1739.15\tGilbert (absent: 1)\n",
       "1725.17\tShengke Zhou\n",
       "1667.00\tShu Zhou\n",
-      "1626.38\tAbby Deng\n"
+      "1626.38\tAbby Deng (absent: 4)\n"
      ]
     }
    ],
