--- a/record.ipynb
+++ b/record.ipynb
@@ -20,15 +20,13 @@
       "New player: Yingjie Ma\n",
       "New player: Di An\n",
       "New player: Guxin Jin\n",
+      "[('Abby Deng', 1.775), ('Chen Meng', 0.69125), ('Brian', 1.6125), ('Tom', 1.4375), ('Quanlai Li', 1.5), ('Shu Zhou', 0.7175), ('Liy', 1.5), ('Lucas Li', 0.65625), ('Yingjie Ma', 1.25), ('Di An', -0.1875), ('Guxin Jin', 0.1725)]\n",
       "\n",
-      "Money won: 236.00\n",
-      "Money lost: 246.00\n",
-      "\n",
-      "1932.76\tDi An\n",
-      "1801.56\tGuxin Jin\n",
-      "1625.27\tLucas Li\n",
-      "1612.52\tChen Meng\n",
-      "1602.95\tShu Zhou\n"
+      "38.16\tDi An\n",
+      "33.97\tGuxin Jin\n",
+      "31.13\tLucas Li\n",
+      "28.73\tChen Meng\n",
+      "26.54\tShu Zhou\n"
      ]
     }
    ],
@@ -62,15 +60,13 @@
      "text": [
       "New player: Shengke Zhou\n",
       "New player: Po Choi\n",
+      "[('Tom', 1.0825), ('Shengke Zhou', 1.3975), ('Lucas Li', 0.65), ('Po Choi', 1.25), ('Yingjie Ma', 0.78), ('Quanlai Li', 0.5), ('Guxin Jin', 1.41875), ('Shu Zhou', 0.75), ('Abby Deng', 1.17375), ('Di An', 1.0)]\n",
       "\n",
-      "Money won: 105.60\n",
-      "Money lost: 105.80\n",
-      "\n",
-      "1756.31\tLucas Li\n",
-      "1716.70\tDi An\n",
-      "1691.63\tShu Zhou\n",
-      "1687.65\tQuanlai Li\n",
-      "1612.52\tChen Meng (absent: 1)\n"
+      "32.39\tLucas Li\n",
+      "30.60\tDi An\n",
+      "29.00\tQuanlai Li\n",
+      "28.85\tShu Zhou\n",
+      "28.73\tChen Meng (absent: 1)\n"
      ]
     }
    ],
@@ -103,15 +99,13 @@
       "New player: Peter Zhou\n",
       "New player: Jianfeng Guo\n",
       "New player: Lei Qi\n",
+      "[('Xue Zhou', 0.7875), ('Shengke Zhou', 0.8825), ('Lucas Li', 2.0), ('Peter Zhou', 0.8625), ('Jianfeng Guo', 0.64), ('Chen Meng', 1.5125), ('Guxin Jin', 1.645), ('Shu Zhou', -0.11999999999999988), ('Lei Qi', 0.665), ('Di An', 1.0)]\n",
       "\n",
-      "Money won: 182.60\n",
-      "Money lost: 172.60\n",
-      "\n",
-      "1813.09\tShu Zhou\n",
-      "1687.65\tQuanlai Li (absent: 1)\n",
-      "1685.73\tJianfeng Guo\n",
-      "1676.15\tLei Qi\n",
-      "1652.94\tDi An\n"
+      "33.66\tJianfeng Guo\n",
+      "32.93\tShu Zhou\n",
+      "31.53\tLei Qi\n",
+      "29.64\tXue Zhou\n",
+      "29.00\tQuanlai Li (absent: 1)\n"
      ]
     }
    ],
@@ -145,15 +139,13 @@
       "New player: ZYR\n",
       "New player: Xueqing Zhang\n",
       "New player: Chaofeng Zhou\n",
+      "[('Abby Deng', 0.395), ('Lei Qi', 1.1575), ('ZYR', 0.94375), ('Quanlai Li', 1.32625), ('Shu Zhou', 1.1575), ('Lucas Li', 0.6475), ('Xueqing Zhang', 1.0775), ('Chaofeng Zhou', 1.25), ('Di An', 0.785), ('Shengke Zhou', 1.08125), ('Jianfeng Guo', 1.5), ('Guxin Jin', 0.9275)]\n",
       "\n",
-      "Money won: 104.10\n",
-      "Money lost: 124.00\n",
-      "\n",
-      "1688.82\tShu Zhou\n",
-      "1676.42\tDi An\n",
-      "1629.19\tXue Zhou (absent: 1)\n",
-      "1626.93\tLucas Li\n",
-      "1626.38\tAbby Deng\n"
+      "29.83\tShu Zhou\n",
+      "29.64\tXue Zhou (absent: 1)\n",
+      "29.05\tDi An\n",
+      "28.53\tLucas Li\n",
+      "27.88\tPeter Zhou (absent: 1)\n"
      ]
     }
    ],
@@ -190,15 +182,13 @@
       "New player: Yuan Zhuang\n",
       "New player: Ellen\n",
       "New player: Xiner\n",
+      "[('Chen Meng', -0.11999999999999988), ('Xue Zhou', 1.6875), ('William Tang', 1.275), ('Yuan Zhuang', 1.05), ('Ellen', 1.5), ('Tom', 0.38749999999999996), ('Quanlai Li', 2.0), ('Lucas Li', 1.25), ('Yingjie Ma', 0.54), ('Chaofeng Zhou', 0.3025), ('Xiner', 1.1175), ('Guxin Jin', 0.6475)]\n",
       "\n",
-      "Money won: 259.40\n",
-      "Money lost: 230.40\n",
-      "\n",
-      "1688.82\tShu Zhou (absent: 1)\n",
-      "1676.42\tDi An (absent: 1)\n",
-      "1662.31\tChen Meng\n",
-      "1626.38\tAbby Deng (absent: 1)\n",
-      "1620.08\tYingjie Ma\n"
+      "29.83\tShu Zhou (absent: 1)\n",
+      "29.56\tChen Meng\n",
+      "29.05\tDi An (absent: 1)\n",
+      "27.88\tPeter Zhou (absent: 2)\n",
+      "27.54\tYingjie Ma\n"
      ]
     }
    ],
@@ -234,15 +224,13 @@
       "New player: Lin Zhou\n",
       "New player: Di Zhu\n",
       "New player: Roc\n",
+      "[('Lin Zhou', 0.71), ('Xue Zhou', 1.035), ('Di Zhu', 1.2125), ('Tom', 1.295), ('Lucas Li', 1.9837500000000001), ('Yingjie Ma', 1.5225), ('Roc', 2.0), ('Chaofeng Zhou', -1.505), ('Di An', 1.53), ('Shengke Zhou', 0.6325000000000001), ('Guxin Jin', 0.8875)]\n",
       "\n",
-      "Money won: 262.00\n",
-      "Money lost: 286.30\n",
-      "\n",
-      "1698.43\tChaofeng Zhou\n",
-      "1688.82\tShu Zhou (absent: 2)\n",
-      "1662.31\tChen Meng (absent: 1)\n",
-      "1626.38\tAbby Deng (absent: 2)\n",
-      "1612.63\tDi An\n"
+      "30.71\tChaofeng Zhou\n",
+      "29.86\tLin Zhou\n",
+      "29.83\tShu Zhou (absent: 2)\n",
+      "29.56\tChen Meng (absent: 1)\n",
+      "27.88\tPeter Zhou (absent: 3)\n"
      ]
     }
    ],
@@ -276,15 +264,13 @@
      "text": [
       "New player: Gilbert\n",
       "New player: Xin Qiu\n",
+      "[('Lucas Li', 2.0), ('Peter Zhou', 0.845), ('Yingjie Ma', 1.1825), ('Chen Meng', 0.022499999999999964), ('Jianfeng Guo', 0.8775), ('Chaofeng Zhou', 2.5), ('Di An', 2.5), ('Xiner', 0.47750000000000004), ('Yuan Zhuang', 0.935), ('Shengke Zhou', -0.8475000000000001), ('Quanlai Li', 1.315), ('Tom', 1.685), ('Gilbert', 0.0), ('Guxin Jin', 1.07), ('Shu Zhou', 0.925), ('Xin Qiu', 0.4525)]\n",
       "\n",
-      "Money won: 425.00\n",
-      "Money lost: 420.20\n",
-      "\n",
-      "1739.15\tGilbert\n",
-      "1699.75\tChen Meng\n",
-      "1648.75\tXin Qiu\n",
-      "1644.69\tShengke Zhou\n",
-      "1640.70\tShu Zhou\n"
+      "35.07\tGilbert\n",
+      "32.09\tXin Qiu\n",
+      "31.48\tChen Meng\n",
+      "29.86\tLin Zhou (absent: 1)\n",
+      "29.61\tShengke Zhou\n"
      ]
     }
    ],
@@ -342,15 +328,18 @@
       "New player: Affab Hafreez\n",
       "New player: Samuel\n",
       "New player: Zhongtian Jiang\n",
+      "[('Ellen Wei', 0.8574999999999999), ('Affab Hafreez', 1.2275), ('Lucas Li', 1.0675), ('Yingjie Ma', 1.0525), ('Chen Meng', -0.11750000000000016), ('Samuel', 1.3725), ('Lei Qi', 1.3375), ('Xue Zhou', 1.8875), ('William Tang', 0.4), ('Shengke Zhou', -0.49), ('Chaofeng Zhou', 1.495), ('Tom', 0.9525), ('Quanlai Li', 1.9525000000000001), ('Guxin Jin', 0.8975), ('Shu Zhou', 0.27249999999999996), ('Xin Qiu', 1.0), ('Zhongtian Jiang', 1.7650000000000001)]\n",
       "\n",
-      "Money won: 338.20\n",
-      "Money lost: 332.60\n",
-      "\n",
-      "1744.26\tChen Meng\n",
-      "1739.15\tGilbert (absent: 1)\n",
-      "1725.17\tShengke Zhou\n",
-      "1667.00\tShu Zhou\n",
-      "1626.38\tAbby Deng (absent: 4)\n"
+      "35.07\tGilbert (absent: 1)\n",
+      "32.80\tChen Meng\n",
+      "31.64\tShengke Zhou\n",
+      "30.46\tShu Zhou\n",
+      "30.02\tEllen Wei\n",
+      "29.86\tLin Zhou (absent: 2)\n",
+      "29.71\tXin Qiu\n",
+      "29.35\tPeter Zhou (absent: 1)\n",
+      "28.17\tXiner (absent: 1)\n",
+      "27.32\tZYR (absent: 4)\n"
      ]
     }
    ],
@@ -383,7 +372,57 @@
     "    ellen_wei: 11.4\n",
     "})\n",
     "\n",
-    "print_top_k_rating(5)"
+    "print_top_k_rating(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "35.07\tGilbert (absent: 1)\n",
+      "32.80\tChen Meng\n",
+      "31.64\tShengke Zhou\n",
+      "30.46\tShu Zhou\n",
+      "30.02\tEllen Wei\n",
+      "29.86\tLin Zhou (absent: 2)\n",
+      "29.71\tXin Qiu\n",
+      "29.35\tPeter Zhou (absent: 1)\n",
+      "28.17\tXiner (absent: 1)\n",
+      "27.32\tZYR (absent: 4)\n",
+      "27.11\tWilliam Tang\n",
+      "26.59\tJianfeng Guo (absent: 1)\n",
+      "26.42\tGuxin Jin\n",
+      "26.12\tXueqing Zhang (absent: 4)\n",
+      "26.06\tYuan Zhuang (absent: 1)\n",
+      "25.89\tAbby Deng (absent: 4)\n",
+      "25.70\tDi Zhu (absent: 2)\n",
+      "25.56\tYingjie Ma\n",
+      "25.25\tLei Qi\n",
+      "25.23\tTom\n",
+      "24.90\tChaofeng Zhou\n",
+      "24.86\tDi An (absent: 1)\n",
+      "24.05\tLucas Li\n",
+      "23.42\tAffab Hafreez\n",
+      "21.96\tXue Zhou\n",
+      "21.15\tSamuel\n",
+      "20.14\tEllen (absent: 3)\n",
+      "20.07\tPo Choi (absent: 6)\n",
+      "20.05\tLiy (absent: 7)\n",
+      "19.70\tQuanlai Li\n",
+      "18.55\tZhongtian Jiang\n",
+      "17.05\tBrian (absent: 7)\n",
+      "14.86\tRoc (absent: 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_top_k_rating()"
    ]
   },
   {
