--- a/record.ipynb
+++ b/record.ipynb
@@ -20,13 +20,16 @@
       "New player: Yingjie Ma\n",
       "New player: Di An\n",
       "New player: Guxin Jin\n",
-      "[('Abby Deng', 1.775), ('Chen Meng', 0.69125), ('Brian', 1.6125), ('Tom', 1.4375), ('Quanlai Li', 1.5), ('Shu Zhou', 0.7175), ('Liy', 1.5), ('Lucas Li', 0.65625), ('Yingjie Ma', 1.25), ('Di An', -0.1875), ('Guxin Jin', 0.1725)]\n",
       "\n",
-      "38.16\tDi An\n",
-      "33.97\tGuxin Jin\n",
-      "31.13\tLucas Li\n",
-      "28.73\tChen Meng\n",
-      "26.54\tShu Zhou\n"
+      "Money won: 236.00\n",
+      "Money lost: 246.00\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "2198.21\t342.22\tDi An\n",
+      "1960.54\t302.49\tGuxin Jin\n",
+      "1808.65\t288.99\tLucas Li\n",
+      "1686.18\t282.60\tChen Meng\n",
+      "1576.55\t279.43\tShu Zhou\n"
      ]
     }
    ],
@@ -60,13 +63,16 @@
      "text": [
       "New player: Shengke Zhou\n",
       "New player: Po Choi\n",
-      "[('Tom', 1.0825), ('Shengke Zhou', 1.3975), ('Lucas Li', 0.65), ('Po Choi', 1.25), ('Yingjie Ma', 0.78), ('Quanlai Li', 0.5), ('Guxin Jin', 1.41875), ('Shu Zhou', 0.75), ('Abby Deng', 1.17375), ('Di An', 1.0)]\n",
       "\n",
-      "32.39\tLucas Li\n",
-      "30.60\tDi An\n",
-      "29.00\tQuanlai Li\n",
-      "28.85\tShu Zhou\n",
-      "28.73\tChen Meng (absent: 1)\n"
+      "Money won: 105.60\n",
+      "Money lost: 105.80\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1870.29\t215.09\tLucas Li\n",
+      "1790.87\t227.69\tDi An\n",
+      "1708.29\t219.80\tQuanlai Li\n",
+      "1690.94\t207.70\tShu Zhou\n",
+      "1686.18\t282.60\tChen Meng (absent: 1)\n"
      ]
     }
    ],
@@ -99,13 +105,16 @@
       "New player: Peter Zhou\n",
       "New player: Jianfeng Guo\n",
       "New player: Lei Qi\n",
-      "[('Xue Zhou', 0.7875), ('Shengke Zhou', 0.8825), ('Lucas Li', 2.0), ('Peter Zhou', 0.8625), ('Jianfeng Guo', 0.64), ('Chen Meng', 1.5125), ('Guxin Jin', 1.645), ('Shu Zhou', -0.11999999999999988), ('Lei Qi', 0.665), ('Di An', 1.0)]\n",
       "\n",
-      "33.66\tJianfeng Guo\n",
-      "32.93\tShu Zhou\n",
-      "31.53\tLei Qi\n",
-      "29.64\tXue Zhou\n",
-      "29.00\tQuanlai Li (absent: 1)\n"
+      "Money won: 182.60\n",
+      "Money lost: 172.60\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1920.39\t272.50\tJianfeng Guo\n",
+      "1899.40\t182.17\tShu Zhou\n",
+      "1811.05\t266.30\tLei Qi\n",
+      "1717.55\t261.71\tXue Zhou\n",
+      "1708.29\t219.80\tQuanlai Li (absent: 1)\n"
      ]
     }
    ],
@@ -139,13 +148,16 @@
       "New player: ZYR\n",
       "New player: Xueqing Zhang\n",
       "New player: Chaofeng Zhou\n",
-      "[('Abby Deng', 0.395), ('Lei Qi', 1.1575), ('ZYR', 0.94375), ('Quanlai Li', 1.32625), ('Shu Zhou', 1.1575), ('Lucas Li', 0.6475), ('Xueqing Zhang', 1.0775), ('Chaofeng Zhou', 1.25), ('Di An', 0.785), ('Shengke Zhou', 1.08125), ('Jianfeng Guo', 1.5), ('Guxin Jin', 0.9275)]\n",
       "\n",
-      "29.83\tShu Zhou\n",
-      "29.64\tXue Zhou (absent: 1)\n",
-      "29.05\tDi An\n",
-      "28.53\tLucas Li\n",
-      "27.88\tPeter Zhou (absent: 1)\n"
+      "Money won: 104.10\n",
+      "Money lost: 124.00\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1746.52\t153.14\tShu Zhou\n",
+      "1717.55\t261.71\tXue Zhou (absent: 1)\n",
+      "1694.26\t153.43\tDi An\n",
+      "1662.77\t154.31\tLucas Li\n",
+      "1632.88\t257.93\tPeter Zhou (absent: 1)\n"
      ]
     }
    ],
@@ -182,13 +194,16 @@
       "New player: Yuan Zhuang\n",
       "New player: Ellen\n",
       "New player: Xiner\n",
-      "[('Chen Meng', -0.11999999999999988), ('Xue Zhou', 1.6875), ('William Tang', 1.275), ('Yuan Zhuang', 1.05), ('Ellen', 1.5), ('Tom', 0.38749999999999996), ('Quanlai Li', 2.0), ('Lucas Li', 1.25), ('Yingjie Ma', 0.54), ('Chaofeng Zhou', 0.3025), ('Xiner', 1.1175), ('Guxin Jin', 0.6475)]\n",
       "\n",
-      "29.83\tShu Zhou (absent: 1)\n",
-      "29.56\tChen Meng\n",
-      "29.05\tDi An (absent: 1)\n",
-      "27.88\tPeter Zhou (absent: 2)\n",
-      "27.54\tYingjie Ma\n"
+      "Money won: 259.40\n",
+      "Money lost: 230.40\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1746.52\t153.14\tShu Zhou (absent: 1)\n",
+      "1726.19\t176.30\tChen Meng\n",
+      "1694.26\t153.43\tDi An (absent: 1)\n",
+      "1632.88\t257.93\tPeter Zhou (absent: 2)\n",
+      "1623.79\t193.31\tLei Qi (absent: 1)\n"
      ]
     }
    ],
@@ -224,13 +239,16 @@
       "New player: Lin Zhou\n",
       "New player: Di Zhu\n",
       "New player: Roc\n",
-      "[('Lin Zhou', 0.71), ('Xue Zhou', 1.035), ('Di Zhu', 1.2125), ('Tom', 1.295), ('Lucas Li', 1.9837500000000001), ('Yingjie Ma', 1.5225), ('Roc', 2.0), ('Chaofeng Zhou', -1.505), ('Di An', 1.53), ('Shengke Zhou', 0.6325000000000001), ('Guxin Jin', 0.8875)]\n",
       "\n",
-      "30.71\tChaofeng Zhou\n",
-      "29.86\tLin Zhou\n",
-      "29.83\tShu Zhou (absent: 2)\n",
-      "29.56\tChen Meng (absent: 1)\n",
-      "27.88\tPeter Zhou (absent: 3)\n"
+      "Money won: 262.00\n",
+      "Money lost: 286.30\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1781.94\t167.13\tChaofeng Zhou\n",
+      "1746.52\t153.14\tShu Zhou (absent: 2)\n",
+      "1726.19\t176.30\tChen Meng (absent: 1)\n",
+      "1715.93\t248.80\tLin Zhou\n",
+      "1632.88\t257.93\tPeter Zhou (absent: 3)\n"
      ]
     }
    ],
@@ -264,13 +282,16 @@
      "text": [
       "New player: Gilbert\n",
       "New player: Xin Qiu\n",
-      "[('Lucas Li', 2.0), ('Peter Zhou', 0.845), ('Yingjie Ma', 1.1825), ('Chen Meng', 0.022499999999999964), ('Jianfeng Guo', 0.8775), ('Chaofeng Zhou', 2.5), ('Di An', 2.5), ('Xiner', 0.47750000000000004), ('Yuan Zhuang', 0.935), ('Shengke Zhou', -0.8475000000000001), ('Quanlai Li', 1.315), ('Tom', 1.685), ('Gilbert', 0.0), ('Guxin Jin', 1.07), ('Shu Zhou', 0.925), ('Xin Qiu', 0.4525)]\n",
       "\n",
-      "35.07\tGilbert\n",
-      "32.09\tXin Qiu\n",
-      "31.48\tChen Meng\n",
-      "29.86\tLin Zhou (absent: 1)\n",
-      "29.61\tShengke Zhou\n"
+      "Money won: 425.00\n",
+      "Money lost: 420.20\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1941.72\t252.52\tGilbert\n",
+      "1801.19\t150.38\tChen Meng\n",
+      "1797.73\t243.81\tXin Qiu\n",
+      "1717.11\t131.67\tShengke Zhou\n",
+      "1715.93\t248.80\tLin Zhou (absent: 1)\n"
      ]
     }
    ],
@@ -328,18 +349,21 @@
       "New player: Affab Hafreez\n",
       "New player: Samuel\n",
       "New player: Zhongtian Jiang\n",
-      "[('Ellen Wei', 0.8574999999999999), ('Affab Hafreez', 1.2275), ('Lucas Li', 1.0675), ('Yingjie Ma', 1.0525), ('Chen Meng', -0.11750000000000016), ('Samuel', 1.3725), ('Lei Qi', 1.3375), ('Xue Zhou', 1.8875), ('William Tang', 0.4), ('Shengke Zhou', -0.49), ('Chaofeng Zhou', 1.495), ('Tom', 0.9525), ('Quanlai Li', 1.9525000000000001), ('Guxin Jin', 0.8975), ('Shu Zhou', 0.27249999999999996), ('Xin Qiu', 1.0), ('Zhongtian Jiang', 1.7650000000000001)]\n",
       "\n",
-      "35.07\tGilbert (absent: 1)\n",
-      "32.80\tChen Meng\n",
-      "31.64\tShengke Zhou\n",
-      "30.46\tShu Zhou\n",
-      "30.02\tEllen Wei\n",
-      "29.86\tLin Zhou (absent: 2)\n",
-      "29.71\tXin Qiu\n",
-      "29.35\tPeter Zhou (absent: 1)\n",
-      "28.17\tXiner (absent: 1)\n",
-      "27.32\tZYR (absent: 4)\n"
+      "Money won: 338.20\n",
+      "Money lost: 332.60\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1941.72\t252.52\tGilbert (absent: 1)\n",
+      "1857.77\t133.76\tChen Meng\n",
+      "1814.09\t122.03\tShengke Zhou\n",
+      "1757.03\t120.79\tShu Zhou\n",
+      "1715.93\t248.80\tLin Zhou (absent: 2)\n",
+      "1706.33\t239.65\tEllen Wei\n",
+      "1698.01\t181.15\tXin Qiu\n",
+      "1687.19\t187.94\tPeter Zhou (absent: 1)\n",
+      "1634.88\t184.11\tXiner (absent: 1)\n",
+      "1605.11\t244.06\tZYR (absent: 4)\n"
      ]
     }
    ],
@@ -377,53 +401,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Yunke Tang\n",
+      "New player: Ziru Liu\n",
+      "New player: Yi Mao\n",
       "\n",
-      "35.07\tGilbert (absent: 1)\n",
-      "32.80\tChen Meng\n",
-      "31.64\tShengke Zhou\n",
-      "30.46\tShu Zhou\n",
-      "30.02\tEllen Wei\n",
-      "29.86\tLin Zhou (absent: 2)\n",
-      "29.71\tXin Qiu\n",
-      "29.35\tPeter Zhou (absent: 1)\n",
-      "28.17\tXiner (absent: 1)\n",
-      "27.32\tZYR (absent: 4)\n",
-      "27.11\tWilliam Tang\n",
-      "26.59\tJianfeng Guo (absent: 1)\n",
-      "26.42\tGuxin Jin\n",
-      "26.12\tXueqing Zhang (absent: 4)\n",
-      "26.06\tYuan Zhuang (absent: 1)\n",
-      "25.89\tAbby Deng (absent: 4)\n",
-      "25.70\tDi Zhu (absent: 2)\n",
-      "25.56\tYingjie Ma\n",
-      "25.25\tLei Qi\n",
-      "25.23\tTom\n",
-      "24.90\tChaofeng Zhou\n",
-      "24.86\tDi An (absent: 1)\n",
-      "24.05\tLucas Li\n",
-      "23.42\tAffab Hafreez\n",
-      "21.96\tXue Zhou\n",
-      "21.15\tSamuel\n",
-      "20.14\tEllen (absent: 3)\n",
-      "20.07\tPo Choi (absent: 6)\n",
-      "20.05\tLiy (absent: 7)\n",
-      "19.70\tQuanlai Li\n",
-      "18.55\tZhongtian Jiang\n",
-      "17.05\tBrian (absent: 7)\n",
-      "14.86\tRoc (absent: 2)\n"
+      "Money won: 307.90\n",
+      "Money lost: 385.30\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1941.72\t252.52\tGilbert (absent: 2)\n",
+      "1796.00\t111.34\tShengke Zhou\n",
+      "1723.98\t120.44\tChen Meng\n",
+      "1715.93\t248.80\tLin Zhou (absent: 3)\n",
+      "1706.33\t239.65\tEllen Wei (absent: 1)\n",
+      "1687.19\t187.94\tPeter Zhou (absent: 2)\n",
+      "1687.16\t150.44\tXin Qiu\n",
+      "1644.84\t111.51\tShu Zhou\n",
+      "1634.88\t184.11\tXiner (absent: 2)\n",
+      "1625.97\t151.24\tYuan Zhuang\n"
      ]
     }
    ],
    "source": [
-    "print_top_k_rating()"
+    "# 2019-10-11\n",
+    "\n",
+    "di_an = \"Di An\"\n",
+    "yunke_tang = \"Yunke Tang\"\n",
+    "ziru_liu = \"Ziru Liu\"\n",
+    "\n",
+    "Game({\n",
+    "    \"Yi Mao\": -20,\n",
+    "    shu_zhou: -69,\n",
+    "    shengke_zhou: 29.2,\n",
+    "    chaofeng_zhou: 56,\n",
+    "    xin_qiu: 15.2,\n",
+    "    xue_zhou: -29.8,\n",
+    "    guxin_jin: 64.1,\n",
+    "    ziru_liu: -120,\n",
+    "    chen_meng: -56,\n",
+    "    yuan_zhuang: 53.2,\n",
+    "    di_an: -40,\n",
+    "    quanlai_li: -22.8,\n",
+    "    tom: 1,\n",
+    "    yingjie_ma: -14.4,\n",
+    "    yunke_tang: -13.3,\n",
+    "    lucas_li: 89.2\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
