--- a/record.ipynb
+++ b/record.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "from rating import Game, print_top_k_rating, print_top_k_income\n",
+    "from rating import Game, print_top_k_rating, print_top_k_score\n",
     "\n",
     "# 2019-08-23\n",
     "Game({\"Guxin Jin\": 66.2,\n",
@@ -280,6 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Xiner Zhang\n",
       "New player: Gilbert\n",
       "New player: Xin Qiu\n",
       "\n",
@@ -287,11 +288,11 @@
       "Money lost: 420.20\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1941.72\t252.52\tGilbert\n",
-      "1801.19\t150.38\tChen Meng\n",
-      "1797.73\t243.81\tXin Qiu\n",
-      "1717.11\t131.67\tShengke Zhou\n",
-      "1715.93\t248.80\tLin Zhou (absent: 1)\n"
+      "1955.38\t252.89\tGilbert\n",
+      "1814.97\t245.03\tXin Qiu\n",
+      "1807.56\t150.61\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang\n",
+      "1720.79\t131.67\tShengke Zhou\n"
      ]
     }
    ],
@@ -310,7 +311,7 @@
     "yingjie_ma = \"Yingjie Ma\"\n",
     "shu_zhou = \"Shu Zhou\"\n",
     "peter_zhou = \"Peter Zhou\"\n",
-    "xiner = \"Xiner\"\n",
+    "xiner_zhang = \"Xiner Zhang\"\n",
     "gilbert = \"Gilbert\"\n",
     "quanlai_li = \"Quanlai Li\"\n",
     "\n",
@@ -328,7 +329,7 @@
     "    yingjie_ma: -14.6,\n",
     "    shu_zhou: 6,\n",
     "    peter_zhou: 12.4,\n",
-    "    xiner: 41.8,\n",
+    "    xiner_zhang: 41.8,\n",
     "    gilbert: 80,\n",
     "    quanlai_li: -25.2\n",
     "})\n",
@@ -354,16 +355,16 @@
       "Money lost: 332.60\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1941.72\t252.52\tGilbert (absent: 1)\n",
-      "1857.77\t133.76\tChen Meng\n",
-      "1814.09\t122.03\tShengke Zhou\n",
-      "1757.03\t120.79\tShu Zhou\n",
+      "1955.38\t252.89\tGilbert (absent: 1)\n",
+      "1863.52\t133.92\tChen Meng\n",
+      "1817.77\t122.04\tShengke Zhou\n",
+      "1760.66\t120.90\tShu Zhou\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 1)\n",
       "1715.93\t248.80\tLin Zhou (absent: 2)\n",
-      "1706.33\t239.65\tEllen Wei\n",
-      "1698.01\t181.15\tXin Qiu\n",
-      "1687.19\t187.94\tPeter Zhou (absent: 1)\n",
-      "1634.88\t184.11\tXiner (absent: 1)\n",
-      "1605.11\t244.06\tZYR (absent: 4)\n"
+      "1708.63\t239.67\tEllen Wei\n",
+      "1707.70\t181.66\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 1)\n",
+      "1591.54\t185.32\tWilliam Tang\n"
      ]
     }
    ],
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,25 +413,25 @@
       "New player: Ziru Liu\n",
       "New player: Yi Mao\n",
       "\n",
-      "Money won: 307.90\n",
-      "Money lost: 385.30\n",
+      "Money won: 317.90\n",
+      "Money lost: 334.90\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1941.72\t252.52\tGilbert (absent: 2)\n",
-      "1796.00\t111.34\tShengke Zhou\n",
-      "1723.98\t120.44\tChen Meng\n",
+      "1955.38\t252.89\tGilbert (absent: 2)\n",
+      "1801.78\t111.34\tShengke Zhou\n",
+      "1800.43\t120.08\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 2)\n",
       "1715.93\t248.80\tLin Zhou (absent: 3)\n",
-      "1706.33\t239.65\tEllen Wei (absent: 1)\n",
-      "1687.19\t187.94\tPeter Zhou (absent: 2)\n",
-      "1687.16\t150.44\tXin Qiu\n",
-      "1644.84\t111.51\tShu Zhou\n",
-      "1634.88\t184.11\tXiner (absent: 2)\n",
-      "1625.97\t151.24\tYuan Zhuang\n"
+      "1708.63\t239.67\tEllen Wei (absent: 1)\n",
+      "1699.05\t150.73\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 2)\n",
+      "1655.13\t151.81\tYuan Zhuang\n",
+      "1640.05\t111.73\tShu Zhou\n"
      ]
     }
    ],
    "source": [
-    "# 2019-10-11\n",
+    "# 2019-10-18\n",
     "\n",
     "di_an = \"Di An\"\n",
     "yunke_tang = \"Yunke Tang\"\n",
@@ -445,8 +446,8 @@
     "    xue_zhou: -29.8,\n",
     "    guxin_jin: 64.1,\n",
     "    ziru_liu: -120,\n",
-    "    chen_meng: -56,\n",
-    "    yuan_zhuang: 53.2,\n",
+    "    chen_meng: -5.6,\n",
+    "    yuan_zhuang: 63.2,\n",
     "    di_an: -40,\n",
     "    quanlai_li: -22.8,\n",
     "    tom: 1,\n",
@@ -460,10 +461,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: David\n",
+      "New player: JZT\n",
+      "\n",
+      "Money won: 447.40\n",
+      "Money lost: 440.60\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1847.56\t184.22\tGilbert\n",
+      "1838.91\t110.76\tChen Meng\n",
+      "1809.77\t103.15\tShengke Zhou\n",
+      "1749.21\t147.20\tJianfeng Guo\n",
+      "1724.50\t131.71\tXin Qiu\n",
+      "1708.63\t239.67\tEllen Wei (absent: 2)\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 3)\n",
+      "1649.57\t132.15\tYuan Zhuang\n",
+      "1630.53\t103.23\tShu Zhou\n",
+      "1602.92\t91.92\tGuxin Jin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-10-25\n",
+    "\n",
+    "Game({\n",
+    "    lucas_li: -40,\n",
+    "    \"David\": -40,\n",
+    "    chaofeng_zhou: -64.8,\n",
+    "    yuan_zhuang: 5,\n",
+    "    tom: 24,\n",
+    "    \"JZT\": -43,\n",
+    "    \"Samuel\": -25,\n",
+    "    di_an: -87,\n",
+    "    xiner_zhang: -80,\n",
+    "    gilbert: 30,\n",
+    "    xin_qiu: 32.4,\n",
+    "    jianfeng_guo: 132,\n",
+    "    quanlai_li: -41.2,\n",
+    "    guxin_jin: -10,\n",
+    "    shu_zhou: -9.6,\n",
+    "    xue_zhou: 67.2,\n",
+    "    shengke_zhou: 51.8,\n",
+    "    chen_meng: 105,\n",
+    "}) \n",
+    "\n",
+    "print_top_k_rating(10)"
+   ]
   },
   {
    "cell_type": "code",
